<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/demobackground">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Almost There"
        android:textAlignment="center"
        android:textColor="#7A9A95"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We need more info"
        android:textColor="#EF6D3B"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="169dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="271dp"
        android:layout_height="452dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="260dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select your Income"
            android:textColor="#FF4700"

            android:textSize="25sp"/>

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/income"
            android:entries="@array/income_level" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type your Zipcode"
            android:textColor="#FF4700"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Grocery"
            android:textColor="#FF4700"
            android:textSize="25sp" />
        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bakeds"
            android:entries="@array/products"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F2860"
            android:onClick="onClickBack"
            android:text="@string/breadclick" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>